tests/files/flow_controller_tests/should_run/060.cmdr
x = 5;
print floor(x);