tests/files/flow_controller_tests/should_fail/032.cmdr
x = "cat";
print floor(x);